# Gcmgamesync

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build-applications.yml  ci.yml  docker-image.yml  release.yml
client/gcmgamesync_client/: __main__.py  scanner.py
docs/: ARCHITECTURE.md  ROADMAP.md
packaging/linux/: crash-crafts-game-sync.desktop  crash-crafts-game-sync.service
packaging/linux/aur/: .SRCINFO  PKGBUILD
packaging/linux/debian/: control
packaging/linux/rpm/: crash-crafts-game-sync.spec
packaging/steam-deck/decky-plugin/: install.sh  main.js  main.py  plugin.json
packaging/windows/: Product.wxs
server/gcmgamesync_server/: app.py  auth.py  storage.py
shared/: emulators.json
shared/web/: app.js  gui.html  gui.js
src/: lib.rs  main.rs
tests/: test_smoke.py
