[package]
name = "gcmgamesync"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
data-encoding = "2.6.0"
glob = "0.3.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.8"
tiny_http = "0.12.0"
ureq = { version = "2.10.1", default-features = false, features = ["json", "tls"] }
urlencoding = "2.1.3"

[dev-dependencies]
tempfile = "3.13.0"
