[package]
name = "crash-crafts-game-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc", "getrandom"] }
data-encoding = "2.11.0"
glob = "0.3.3"
hmac = "0.13.0"
pbkdf2 = "0.13.0"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha2 = "0.11.0"
tiny_http = "0.12.0"
ureq = { version = "3.3.0", default-features = false, features = ["json", "rustls"] }
urlencoding = "2.1.3"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"
