[project]
name = "gcmgamesync"
version = "0.1.0"
description = "Docker-hosted emulator save backup and sync MVP"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gcmgamesync-server = "gcmgamesync_server.app:run"
gcmgamesync-client = "gcmgamesync_client.__main__:main"

[tool.setuptools]
packages = ["gcmgamesync_server", "gcmgamesync_client"]
package-dir = {"gcmgamesync_server" = "server/gcmgamesync_server", "gcmgamesync_client" = "client/gcmgamesync_client"}
